[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
indoc = "2.0"

[dependencies]
reqwest = { version = "0.11", features = [ "blocking" ] }
paste = "1.0"
num = "0.4"

[profile.release]
debug = true
